# opengl

./: CMakeLists.txt  README.md  start  tags
include/: camera.hpp  model.hpp  world.hpp
src/: CMakeLists.txt  camera.cpp  main.cpp  tags  world.cpp
src/gl3w/: CMakeLists.txt  gl3w.c
src/models/: fragment
